--- a/src/pages/Player.css
+++ b/src/pages/Player.css
@@ -8,10 +8,6 @@
   cursor: none;
 }
 
-.player-page.native {
-  background: transparent;
-}
-
 .player-page:hover {
   cursor: default;
 }
